--- a/contact/contact.css
+++ b/contact/contact.css
@@ -60,8 +60,6 @@ body {
     width: 100%;
 
     border-radius: 10px;
-
-    background: #ffffff;
 }
 
 form {
@@ -212,7 +210,7 @@ form #smtBtn:hover {
 }
 
 .tfree p {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .tfree p a {
@@ -247,7 +245,7 @@ form #smtBtn:hover {
 
     padding: 10px 10px 0px 0px;
 
-    width: 20px;
+    width: 30px;
 
     font-size: 16px;
     color: rgb(0, 0, 0);
@@ -509,6 +507,10 @@ footer .containers .contact .info li a {
         align-items: center;
         padding: 10px;
         gap: 40px;
+    }
+
+    .contact_details {
+        padding: 20px 10px;
     }
 
     .contact_details .heading p {
