--- a/contact/contact.css
+++ b/contact/contact.css
@@ -205,8 +205,8 @@ form #smtBtn:hover {
 }
 
 .tfree {
-    margin-left: 60px;
-    margin-right: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .tfree p {
@@ -285,44 +285,53 @@ form #smtBtn:hover {
 }
 
 .map {
-    position: relative;
-    left: 30%;
-
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
-
     gap: 20px;
 
-    padding: 5px 10px;
+    width: 100%;
+
+}
+
+.map img {
+    height: 100px;
+    width: 150px;
 
     border-radius: 5px;
+    border: 2px solid rgb(202, 202, 202);
+}
+
+.map .aTag {
+    padding:10px;
+
+    border-radius: 5px;
+
+    text-decoration: none;
 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     color: #000000;
     background: #ffffff;
 }
 
-.map:hover {
+.map .aTag:hover {
     cursor: pointer;
 
     background-color: #e2e2e2;
 }
 
-.map a {
-    text-decoration: none;
-    color: inherit;
-}
-
 .map .mapLine {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
     margin-bottom: 0px;
 
     font-size: 20px;
 }
 
 .map .mapLine span {
-    padding: 10px 10px 0px 0px;
-
     font-size: 20px;
 
     color: rgb(0, 0, 0);
@@ -541,7 +550,8 @@ footer .containers .contact .info li a {
         height: 50px;
     }
 
-    .contact_details{
+    .contact_details {
+        padding: 20px 10px 20px 20px;
         min-height: 100dvh;
     }
 
