--- a/products/products.css
+++ b/products/products.css
@@ -97,6 +97,16 @@ body {
     padding: 20px 10px;
 }
 
+.search_dummy{
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.search_dummy p{
+    font-size: 25px;
+}
+
 .content_box {
     display: flex;
     flex-direction: column;
